# hive-mcp

./: .gitignore  .gitmodules  .hive-project.edn  LICENSE  README.md  bb.edn  deps.edn  docker-compose.yml  kanban.org  start-bb-mcp.sh  start-mcp.sh
.claude/: MEMORY_ENHANCEMENTS.md  SESSION_CONTEXT.json  settings.json
docs/: ADDONS.org  ADDON_REFERENCE.md  ARCHITECTURE_OVER_COMPLIANCE.md  BIDIRECTIONAL_CHANNEL.md  CHANNEL_PORT_CONFIG.md  CLAUDE_CODE_COMMANDS.md  CONTRIBUTING.md  DEMO_LING_DIALOGUE.md  HIVEMIND_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GAPS.md  PROJECT_SUMMARY.md  ROADMAP-diagrams.org  SWARM_BACKENDS.md  TELEMETRY_QUICK_START.md  WHY_LISP_DIALOGUE.md  addon-api.md  addon-development.md  clojure-mcp-emacs.md  evaluator.md  evil-mode-rag-example.org  presentation-reveal.html  presentation-reveal.org  presentation.org  presentation.tex  resilience.md  swarm-api.md  swarm-development.md  swarm-protocol.md  telemetry.md  validation.md
elisp/: claude-code-mcp.el  emacs-mcp-addons.el  emacs-mcp-api.el  emacs-mcp-channel.el  emacs-mcp-context.el  emacs-mcp-kanban.el  emacs-mcp-memory.el  emacs-mcp-triggers.el  emacs-mcp.el  hive-mcp-api.el  hive-mcp-workflows.el
examples/: evaluator_usage.clj
olympus-web-ui/: .gitignore  README.md  deps.edn  package.json  (+1 more)
python/: README.md  pyproject.toml
python/hive_hooks/: __init__.py  auto_observation.py  significance.py
python/hive_tools/: __init__.py  bridge.py  coordination.py  server.py
python/tests/: __init__.py  test_auto_observation.py  test_coordination.py  test_significance.py
(+502 files in other folders)
