[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive-tools"
version = "0.12.0"
description = "Python @tool wrappers for hive-mcp coordination (Claude Agent SDK)"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["hive_tools", "hive_hooks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
